<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.shop.generic</groupId>
    <artifactId>gs-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Generic Shop Parent</name>
    <description>Parent pom for the generic shop (gs)</description>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.2</version>
        <relativePath/>
    </parent>

    <properties>
        <!--        <h2.version>2.1.214</h2.version>-->
        <java.version>21</java.version>
        <!--        <json.version>20220924</json.version>-->
        <!--        <lombok.version>1.18.24</lombok.version>-->
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring.boot.version>3.3.2</spring.boot.version>
        <!--        <surefire.version>3.0.0-M7</surefire.version>-->
        <!--        <testcontainers.version>1.17.6</testcontainers.version>-->
    </properties>

    <modules>
        <module>gs-common</module>
        <module>product-service</module>
        <module>purchasing-service</module>
        <module>order-service</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-dependencies</artifactId>-->
            <!--                <version>${spring.boot.version}</version>-->
            <!--                <type>pom</type>-->
            <!--                <scope>import</scope>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-starter-actuator</artifactId>-->
            <!--                <version>${spring.boot.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-starter-data-jpa</artifactId>-->
            <!--                <version>${spring.boot.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-starter-web</artifactId>-->
            <!--                <version>${spring.boot.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-starter-logging</artifactId>-->
            <!--                <version>${spring.boot.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.flywaydb</groupId>-->
            <!--                <artifactId>flyway-core</artifactId>-->
            <!--                <version>${spring.boot.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.kafka</groupId>-->
            <!--                <artifactId>spring-kafka</artifactId>-->
            <!--                <version>${spring.boot.version}</version>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.session</groupId>-->
            <!--                <artifactId>spring-session-core</artifactId>-->
            <!--                <version>${spring.boot.version}</version>-->
            <!--            </dependency>-->

            <!--            <dependency>-->
            <!--                <groupId>org.postgresql</groupId>-->
            <!--                <artifactId>postgresql</artifactId>-->
            <!--                <version>${spring.boot.version}</version>-->
            <!--                <scope>runtime</scope>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.projectlombok</groupId>-->
            <!--                <artifactId>lombok</artifactId>-->
            <!--                <version>${lombok.version}</version>-->
            <!--                <scope>provided</scope>-->
            <!--            </dependency>-->

            <!--            <dependency>-->
            <!--                <groupId>com.h2database</groupId>-->
            <!--                <artifactId>h2</artifactId>-->
            <!--                <version>${h2.version}</version>-->
            <!--                <scope>runtime</scope>-->
            <!--            </dependency>-->

            <!--            <dependency>-->
            <!--                <groupId>org.json</groupId>-->
            <!--                <artifactId>json</artifactId>-->
            <!--                <version>${json.version}</version>-->
            <!--            </dependency>-->


            <!-- TEST DEPENDENCIES -->
            <dependency>
                <groupId>org.jeasy</groupId>
                <artifactId>easy-random-core</artifactId>
                <version>5.0.0</version>
                <scope>test</scope>
            </dependency>

            <!--            <dependency>-->
            <!--                <groupId>org.springframework.boot</groupId>-->
            <!--                <artifactId>spring-boot-starter-test</artifactId>-->
            <!--                <version>${spring.boot.version}</version>-->
            <!--                <scope>test</scope>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.springframework.kafka</groupId>-->
            <!--                <artifactId>spring-kafka-test</artifactId>-->
            <!--                <version>${spring.boot.version}</version>-->
            <!--                <scope>test</scope>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.testcontainers</groupId>-->
            <!--                <artifactId>junit-jupiter</artifactId>-->
            <!--                <version>${spring.boot.version}</version>-->
            <!--                <scope>test</scope>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.testcontainers</groupId>-->
            <!--                <artifactId>testcontainers-bom</artifactId>-->
            <!--                <version>${testcontainers.version}</version>-->
            <!--                <type>pom</type>-->
            <!--                <scope>import</scope>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.testcontainers</groupId>-->
            <!--                <artifactId>kafka</artifactId>-->
            <!--                <version>${testcontainers.version}</version>-->
            <!--                <scope>test</scope>-->
            <!--            </dependency>-->
            <!--            <dependency>-->
            <!--                <groupId>org.testcontainers</groupId>-->
            <!--                <artifactId>postgresql</artifactId>-->
            <!--                <version>${testcontainers.version}</version>-->
            <!--                <scope>test</scope>-->
            <!--            </dependency>-->
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Required to fix issues with parameter name discover. See https://github.com/spring-projects/spring-framework/wiki/Upgrading-to-Spring-Framework-6.x#parameter-name-retention -->
                <!--                <plugin>-->
                <!--                    <groupId>org.apache.maven.plugins</groupId>-->
                <!--                    <artifactId>maven-compiler-plugin</artifactId>-->
                <!--                    <configuration>-->
                <!--                        <parameters>true</parameters>-->
                <!--                    </configuration>-->
                <!--                </plugin>-->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <!--                    <version>${spring.boot.version}</version>-->
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <!--                    <version>${surefire.version}</version>-->
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
